--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.8.1",
+    "mongoose": "^8.6.1",
+    "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "postcss": "^8",
