--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.4.0",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
