--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "cloudinary": "^2.4.0",
+    "mapbox-gl": "^3.6.0",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
+    "react-share": "^5.1.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
   },
